[package]
name = "marc_extractor_rs"
version = "1.0.0"
edition = "2021"
authors = ["Evergreen ILS"]
description = "High-performance MARC record extractor for Evergreen ILS"

[[bin]]
name = "marc_extractor_rs"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Progress bars
indicatif = "0.17"

# XML writing
quick-xml = "0.36"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async channels
tokio-stream = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
